# market-interface

./: LICENSE  README.md  market-interface.cabal  stack.yaml
doc/: market-interface-model.md  strategy-control-model.md
src/Market/: Interface.hs
