cabal-version:       >=1.20

name:               market-interface
version:            1.0.0.0
description:        Please see the README on GitHub at <https://github.com/dimitri-xyz/market-interface#readme>
homepage:           https://github.com/dimitri-xyz/market-interface#readme
bug-reports:        https://github.com/dimitri-xyz/market-interface/issues
author:             Dimitri DeFigueiredo
maintainer:         github@dimitri.xyz
copyright:          2019 CoinBene Brasil

license:            BSD3
license-file:       LICENSE
category:           finance
build-type:         Simple

extra-source-files: README.md
extra-doc-files:    doc/market-interface-model.md

library
    exposed-modules:    Market.Interface
    other-modules:
    hs-source-dirs:     src
    build-depends:      base
                      , hashable

    default-language:   Haskell2010

source-repository head
  type: git
  location: https://github.com/dimitri-xyz/market-interface

